infra/k3s/traefik-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
    external-dns: tailscale
  annotations:
    tailscale.com/hostname: glaze-admin
    external-dns.alpha.kubernetes.io/hostname: admin.potterdoc.com,headlamp.potterdoc.com
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
